# plivo-agentstack-python

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: agent_basic.py  agent_fastapi.py  audio_stream.py  background_audio.py  buy_number.py  byollm.py  byollm_echo.py  callback_server.py  full_pipeline.py  metrics.py  multi_party.py  pipeline_modes.py  s2s_agent.py  send_sms.py  whatsapp.py
src/plivo_agent/: __init__.py  _http.py  client.py  errors.py  types.py  utils.py
src/plivo_agent/agent/: __init__.py  app.py  client.py  events.py  session.py
src/plivo_agent/messaging/: __init__.py  client.py  interactive.py  templates.py
src/plivo_agent/numbers/: __init__.py  client.py
src/plivo_agentstack/: __init__.py  _http.py  client.py
src/plivo_agentstack/agent/: __init__.py  app.py  client.py  session.py
src/plivo_agentstack/messaging/: __init__.py  client.py
src/plivo_agentstack/numbers/: __init__.py  client.py
tests/: conftest.py  test_errors.py  test_http.py  test_utils.py
tests/test_agent/: test_app.py  test_client.py  test_events.py  test_session.py
tests/test_messaging/: test_client.py  test_interactive.py  test_templates.py
tests/test_numbers/: test_client.py
