[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plivo_agentstack"
version = "0.1.0"
description = "Plivo Python SDK — async-first, with Voice AI Agent support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
    "websockets>=13,<15",
    "starlette>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
